# ff_decimals_randomization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_fm_analysis.py  run_fm_twostage.py  run_poc_analysis.py
.beads/: issues.jsonl
code/: fm_random.ipynb  linear_random.ipynb
scripts/: run_fm_tests.py  run_linear_tests.py
src/ff_decimals/: __init__.py  config.py
src/ff_decimals/analysis/: __init__.py  fama_macbeth.py  linear_regression.py  randomization.py
src/ff_decimals/data/: __init__.py  crsp.py  factors.py  predictors.py
src/ff_decimals/utils/: __init__.py  stats.py
