[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ff_decimals"
version = "0.1.0"
description = "Research on the impact of decimal rounding in Fama-French factors on asset pricing tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ff_decimals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
